Bug 478133 - Avoid instantiating Boolean objects
Change-Id: I4ebc82b7b7317b4a3096245e974fb694aed6cd5e